[package]
name = "aleo-accounts"
version = "0.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
edition = "2018"

[dependencies]
snarkos-dpc = { path = "../../snarkOS/dpc", version = "0.8.0" }
snarkos-errors = { path = "../../snarkOS/errors", version = "0.8.0" }
snarkos-objects = { path = "../../snarkOS/objects", version = "0.8.0" }

image = { version = "0.23" }
qrcode = { version = "0.12" }
rand = { version = "0.7" }
thiserror = { version = "1.0" }
